force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/Forrester_SHIR_CRDR_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CRDR_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CRDR_VIEW</externalName>
    <label>CRDR</label>
    <pluralLabel>CRDRs</pluralLabel>
</CustomObject>