force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/ADMIN_DEDUCTION__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_DEDUCTION__c</fullName>
    <description>ADMIN_DEDUCTION</description>
    <externalDeveloperName>ADMIN_DEDUCTION</externalDeveloperName>
    <label>Admin Deduction</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>