force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/ADMIN_DEDUCTION_VIRTUAL__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_DEDUCTION_VIRTUAL__c</fullName>
    <description>ADMIN_DEDUCTION_VIRTUAL</description>
    <externalDeveloperName>ADMIN_DEDUCTION_VIRTUAL</externalDeveloperName>
    <label>Admin Deduction Virtual</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>