force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_CLOSE_DATE__c.field-meta.xml
<CustomField>
    <fullName>CASE_CLOSE_DATE__c</fullName>
    <description>CASE_CLOSE_DATE</description>
    <externalDeveloperName>CASE_CLOSE_DATE</externalDeveloperName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>