force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_CRDR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_RECID__c</fullName>
    <description>CASE_CRDR_RECID</description>
    <externalDeveloperName>CASE_CRDR_RECID</externalDeveloperName>
    <label>CRDR RecId</label>
    <length>24</length>
    <referenceTargetField>Case_CRDR__c.ExternalCaseCRDRId__c</referenceTargetField>
    <referenceTo>Case_CRDR__c</referenceTo>
    <relationshipLabel>CRDRs</relationshipLabel>
    <relationshipName>CRDRs</relationshipName>
    <type>IndirectLookup</type>
</CustomField>