force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_EQUITY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CASE_EQUITY_FLAG__c</fullName>
    <description>CASE_EQUITY_FLAG</description>
    <externalDeveloperName>CASE_EQUITY_FLAG</externalDeveloperName>
    <label>Case Equity Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>