force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_FEDERAL_SPONSOR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CASE_FEDERAL_SPONSOR_FLAG__c</fullName>
    <description>CASE_FEDERAL_SPONSOR_FLAG</description>
    <externalDeveloperName>CASE_FEDERAL_SPONSOR_FLAG</externalDeveloperName>
    <label>Case Federal Sponsor Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>