force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_MIT_OWN_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CASE_MIT_OWN_FLAG__c</fullName>
    <description>CASE_MIT_OWN_FLAG</description>
    <externalDeveloperName>CASE_MIT_OWN_FLAG</externalDeveloperName>
    <label>MIT Own Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>