force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_NO_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>CASE_NO_SUFFIX__c</fullName>
    <description>CASE_NO_SUFFIX</description>
    <externalDeveloperName>CASE_NO_SUFFIX</externalDeveloperName>
    <inlineHelpText>Case without suffix: Q- J - H -B - R - W - DE -</inlineHelpText>
    <label>Org Case Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>