force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_OPEN_DATE__c.field-meta.xml
<CustomField>
    <fullName>CASE_OPEN_DATE__c</fullName>
    <description>CASE_OPEN_DATE</description>
    <externalDeveloperName>CASE_OPEN_DATE</externalDeveloperName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>