force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_OWNERSHIP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CASE_OWNERSHIP_TYPE__c</fullName>
    <description>CASE_OWNERSHIP_TYPE</description>
    <externalDeveloperName>CASE_OWNERSHIP_TYPE</externalDeveloperName>
    <label>Ownership Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>