force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_SORT_ORDER__c.field-meta.xml
<CustomField>
    <fullName>CASE_SORT_ORDER__c</fullName>
    <description>CASE_SORT_ORDER</description>
    <externalDeveloperName>CASE_SORT_ORDER</externalDeveloperName>
    <label>CASE_SORT_ORDER</label>
    <length>5</length>
    <type>Text</type>
</CustomField>