force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>CASE_SUFFIX__c</fullName>
    <description>CASE_SUFFIX</description>
    <externalDeveloperName>CASE_SUFFIX</externalDeveloperName>
    <label>Case Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>