force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CASE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CASE_TYPE__c</fullName>
    <description>Case Type</description>
    <externalDeveloperName>CASE_TYPE</externalDeveloperName>
    <label>Type</label>
    <length>9</length>
    <type>Text</type>
</CustomField>