force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CRDR_DATE__c.field-meta.xml
<CustomField>
    <fullName>CRDR_DATE__c</fullName>
    <description>CRDR_DATE</description>
    <externalDeveloperName>CRDR_DATE</externalDeveloperName>
    <label>CRDR Date</label>
    <type>Date</type>
</CustomField>