force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CRDR_NAME__c.field-meta.xml
<CustomField>
    <fullName>CRDR_NAME__c</fullName>
    <description>CRDR_NAME</description>
    <externalDeveloperName>CRDR_NAME</externalDeveloperName>
    <label>CRDR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>