force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/CRDR_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CRDR_STATUS__c</fullName>
    <description>CRDR_STATUS</description>
    <externalDeveloperName>CRDR_STATUS</externalDeveloperName>
    <label>CRDR Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Draft</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>