force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/DISCLOSURE_TITLE__c.field-meta.xml
<CustomField>
    <fullName>DISCLOSURE_TITLE__c</fullName>
    <description>DISCLOSURE_TITLE</description>
    <externalDeveloperName>DISCLOSURE_TITLE</externalDeveloperName>
    <label>Case Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>