force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/DOM_PATENT_DEDUCT_PCT__c.field-meta.xml
<CustomField>
    <fullName>DOM_PATENT_DEDUCT_PCT__c</fullName>
    <description>DOM_PATENT_DEDUCT_PCT</description>
    <externalDeveloperName>DOM_PATENT_DEDUCT_PCT</externalDeveloperName>
    <label>Domestic Patent Cost Deduction Pct</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>