force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/DOMESTIC_WITHHOLDING__c.field-meta.xml
<CustomField>
    <fullName>DOMESTIC_WITHHOLDING__c</fullName>
    <description>DOMESTIC_WITHHOLDING</description>
    <externalDeveloperName>DOMESTIC_WITHHOLDING</externalDeveloperName>
    <label>Domestic Withholding</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>