force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/DOMESTIC_WITHHOLDING_BASE__c.field-meta.xml
<CustomField>
    <fullName>DOMESTIC_WITHHOLDING_BASE__c</fullName>
    <description>DOMESTIC_WITHHOLDING_BASE</description>
    <externalDeveloperName>DOMESTIC_WITHHOLDING_BASE</externalDeveloperName>
    <label>Domestic Withholding Base</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>