force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/DRAFT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>DRAFT_FLAG__c</fullName>
    <description>DRAFT_FLAG</description>
    <externalDeveloperName>DRAFT_FLAG</externalDeveloperName>
    <label>Draft Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>