force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/FIRST_YR_CRDR__c.field-meta.xml
<CustomField>
    <fullName>FIRST_YR_CRDR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FIRST_YR_CRDR</description>
    <externalDeveloperName>FIRST_YR_CRDR</externalDeveloperName>
    <label>First Year</label>
    <type>Checkbox</type>
</CustomField>