force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/FOREIGN_WITHHOLDING__c.field-meta.xml
<CustomField>
    <fullName>FOREIGN_WITHHOLDING__c</fullName>
    <description>FOREIGN_WITHHOLDING</description>
    <externalDeveloperName>FOREIGN_WITHHOLDING</externalDeveloperName>
    <label>Foreign Withholding</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>