force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/FOREIGN_WITHHOLDING_BASE__c.field-meta.xml
<CustomField>
    <fullName>FOREIGN_WITHHOLDING_BASE__c</fullName>
    <description>FOREIGN_WITHHOLDING_BASE</description>
    <externalDeveloperName>FOREIGN_WITHHOLDING_BASE</externalDeveloperName>
    <label>Foreign Withholding Base</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>