force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/GROUP_CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>GROUP_CASE_RECID__c</fullName>
    <description>GROUP_CASE_RECID</description>
    <externalDeveloperName>GROUP_CASE_RECID</externalDeveloperName>
    <label>Group Case RecId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>