force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/GROUP_SIZE__c.field-meta.xml
<CustomField>
    <fullName>GROUP_SIZE__c</fullName>
    <description>GROUP_SIZE</description>
    <externalDeveloperName>GROUP_SIZE</externalDeveloperName>
    <label>Group Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>