force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/HAS_ACTIVE_IP__c.field-meta.xml
<CustomField>
    <fullName>HAS_ACTIVE_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HAS_ACTIVE_IP</description>
    <externalDeveloperName>HAS_ACTIVE_IP</externalDeveloperName>
    <label>Has Active IP</label>
    <type>Checkbox</type>
</CustomField>