force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/HAS_AGR_WITH_SUBLICENSE__c.field-meta.xml
<CustomField>
    <fullName>HAS_AGR_WITH_SUBLICENSE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HAS_AGR_WITH_SUBLICENSE</description>
    <externalDeveloperName>HAS_AGR_WITH_SUBLICENSE</externalDeveloperName>
    <label>Has Agr With Sublicense</label>
    <type>Checkbox</type>
</CustomField>