force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/HAS_EXPIRING_IP_IN_FY__c.field-meta.xml
<CustomField>
    <fullName>HAS_EXPIRING_IP_IN_FY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HAS_EXPIRING_IP_IN_FY</description>
    <externalDeveloperName>HAS_EXPIRING_IP_IN_FY</externalDeveloperName>
    <label>Has IP Expiring in FY</label>
    <type>Checkbox</type>
</CustomField>