force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/HAS_OPEN_CHK_LIST__c.field-meta.xml
<CustomField>
    <fullName>HAS_OPEN_CHK_LIST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HAS_OPEN_CHK_LIST</description>
    <externalDeveloperName>HAS_OPEN_CHK_LIST</externalDeveloperName>
    <label>Has Open Checklist</label>
    <type>Checkbox</type>
</CustomField>