force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/HHMI_LOGIC_FLAG__c.field-meta.xml
<CustomField>
    <fullName>HHMI_LOGIC_FLAG__c</fullName>
    <description>HHMI_LOGIC_FLAG</description>
    <externalDeveloperName>HHMI_LOGIC_FLAG</externalDeveloperName>
    <label>HHMI Logic Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>