force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/MATTER_RESERVE__c.field-meta.xml
<CustomField>
    <fullName>MATTER_RESERVE__c</fullName>
    <description>MATTER_RESERVE</description>
    <externalDeveloperName>MATTER_RESERVE</externalDeveloperName>
    <label>Matter Reserve</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>