force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/MATTER_WITHHOLDING_BASE__c.field-meta.xml
<CustomField>
    <fullName>MATTER_WITHHOLDING_BASE__c</fullName>
    <description>MATTER_WITHHOLDING_BASE</description>
    <externalDeveloperName>MATTER_WITHHOLDING_BASE</externalDeveloperName>
    <label>Matter Withholding Base</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>