force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/RESERVE_PRIOR__c.field-meta.xml
<CustomField>
    <fullName>RESERVE_PRIOR__c</fullName>
    <description>RESERVE_PRIOR</description>
    <externalDeveloperName>RESERVE_PRIOR</externalDeveloperName>
    <label>Reserve Prior</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>