force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/RESERVE_WITHHOLDING__c.field-meta.xml
<CustomField>
    <fullName>RESERVE_WITHHOLDING__c</fullName>
    <description>RESERVE_WITHHOLDING</description>
    <externalDeveloperName>RESERVE_WITHHOLDING</externalDeveloperName>
    <label>Reserve Withholding</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>