force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/RESERVE_WITHHOLDING_INTENDED__c.field-meta.xml
<CustomField>
    <fullName>RESERVE_WITHHOLDING_INTENDED__c</fullName>
    <description>RESERVE_WITHHOLDING_INTENDED</description>
    <externalDeveloperName>RESERVE_WITHHOLDING_INTENDED</externalDeveloperName>
    <label>Reserve Withholding Intended</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>