force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/TLA_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>TLA_EMAIL__c</fullName>
    <description>TLA_EMAIL</description>
    <externalDeveloperName>TLA_EMAIL</externalDeveloperName>
    <label>TLA Email</label>
    <length>55</length>
    <type>Text</type>
</CustomField>