force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/TLA_ID__c.field-meta.xml
<CustomField>
    <fullName>TLA_ID__c</fullName>
    <description>TLA_ID</description>
    <externalDeveloperName>TLA_ID</externalDeveloperName>
    <label>TLA ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>