force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/TLA_MIT_ID__c.field-meta.xml
<CustomField>
    <fullName>TLA_MIT_ID__c</fullName>
    <description>TLA_MIT_ID</description>
    <externalDeveloperName>TLA_MIT_ID</externalDeveloperName>
    <label>TLA MITID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>