force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/TLO_MIT_ID__c.field-meta.xml
<CustomField>
    <fullName>TLO_MIT_ID__c</fullName>
    <description>TLO_MIT_ID</description>
    <externalDeveloperName>TLO_MIT_ID</externalDeveloperName>
    <label>TLO MITID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>