force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/WITHHOLDING_REIMB_FOREIGN__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_REIMB_FOREIGN__c</fullName>
    <description>WITHHOLDING_REIMB_FOREIGN</description>
    <externalDeveloperName>WITHHOLDING_REIMB_FOREIGN</externalDeveloperName>
    <label>Withholding Reimb Foreign</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>