force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/WITHHOLDING_UNREIMB_DOMESTIC__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_UNREIMB_DOMESTIC__c</fullName>
    <description>WITHHOLDING_UNREIMB_DOMESTIC</description>
    <externalDeveloperName>WITHHOLDING_UNREIMB_DOMESTIC</externalDeveloperName>
    <label>Withholding Unreimb Domestic</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>