force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/YTD_DEDUCT_INVENTOR_GRP__c.field-meta.xml
<CustomField>
    <fullName>YTD_DEDUCT_INVENTOR_GRP__c</fullName>
    <description>YTD_DEDUCT_INVENTOR_GRP</description>
    <externalDeveloperName>YTD_DEDUCT_INVENTOR_GRP</externalDeveloperName>
    <label>Inventor Group Share</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>