force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/YTD_INC_LVL_B__c.field-meta.xml
<CustomField>
    <fullName>YTD_INC_LVL_B__c</fullName>
    <description>YTD_INC_LVL_B</description>
    <externalDeveloperName>YTD_INC_LVL_B</externalDeveloperName>
    <label>Royalty Income at Level B</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>