force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/YTD_INC_LVL_C__c.field-meta.xml
<CustomField>
    <fullName>YTD_INC_LVL_C__c</fullName>
    <description>YTD_INC_LVL_C</description>
    <externalDeveloperName>YTD_INC_LVL_C</externalDeveloperName>
    <label>Royalty Income at Level C</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>