force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/YTD_INC_MIT_NET__c.field-meta.xml
<CustomField>
    <fullName>YTD_INC_MIT_NET__c</fullName>
    <description>YTD_INC_MIT_NET</description>
    <externalDeveloperName>YTD_INC_MIT_NET</externalDeveloperName>
    <label>Remaining Income</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>