force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/fields/ZERO_DOLLAR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ZERO_DOLLAR_FLAG__c</fullName>
    <description>ZERO_DOLLAR_FLAG</description>
    <externalDeveloperName>ZERO_DOLLAR_FLAG</externalDeveloperName>
    <label>Zero Dollar Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>