force-app/main/default/objects/Forrester_SHIR_CRDR_VIEW__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CRDR_NAME__c</columns>
    <columns>CRDR_STATUS__c</columns>
    <columns>CASE_OWNERSHIP_TYPE__c</columns>
    <columns>CASE_SUFFIX__c</columns>
    <columns>FY__c</columns>
    <columns>CASE_STATUS__c</columns>
    <columns>TLO_NAME__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ZERO_DOLLAR_FLAG__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <label>All</label>
</ListView>